[package]
name = "string-pool"
version = "0.0.1"
edition = "2024"

[[bin]]
name = "stringp"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.49", features = ["derive"] }
clap_complete = "4.5.59"
confy = "1.0.0"
json = "0.12.4"
once_cell = "1.21.3"
serde = { version = "1.0.228", features = ["derive"] }
