[package]
name = "string-pool"
version = "0.0.8"
edition = "2024"
description = "A \"key-value\" utility for UNIX-like systems. Allows to conveniently store values and retrieve them by key."
license = "GPL-3-or-later"

[[bin]]
name = "stringp"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.49", features = ["derive"] }
clap_complete = "4.5.59"
json = "0.12.4"
which = "8.0.0"
